// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots of Checkbox Checked Checkbox 1`] = `
<DocumentFragment>
  <label
    class="checkbox"
    tabindex="0"
  >
    <span
      class="checkbox__wrap"
    >
      <input
        checked=""
        class="checkbox__input"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="checkbox__icon"
        data-testid="unchecked-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Snapshots of Checkbox Should render correctly a disabled and checked checkbox 1`] = `
<DocumentFragment>
  <label
    class="checkbox checkbox_checked checkbox_disabled"
    tabindex="0"
  >
    <span
      class="checkbox__wrap"
    >
      <input
        aria-checked="true"
        checked=""
        class="checkbox__input"
        disabled=""
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="checkbox__icon"
        data-testid="checked-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Snapshots of Checkbox Should render correctly a disabled and unchecked checkbox 1`] = `
<DocumentFragment>
  <label
    class="checkbox checkbox_disabled"
    tabindex="0"
  >
    <span
      class="checkbox__wrap"
    >
      <input
        aria-checked="false"
        class="checkbox__input"
        disabled=""
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="checkbox__icon"
        data-testid="unchecked-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </span>
  </label>
</DocumentFragment>
`;

exports[`Snapshots of Checkbox Unchecked Checkbox 1`] = `
<DocumentFragment>
  <label
    class="checkbox"
    tabindex="0"
  >
    <span
      class="checkbox__wrap"
    >
      <input
        class="checkbox__input"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="checkbox__icon"
        data-testid="unchecked-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </span>
  </label>
</DocumentFragment>
`;
